# construction-maps-mcp

./: .env.example  .gitignore  BUGFIX_REPORT.md  EXAMPLES.md  INSTALL.md  PRACTICAL_APPLICATIONS.md  QUICKSTART.md  README.md  SUCCESS.md  SUMMARY.md  TEST_REPORT.md  add-to-claude.sh  claude-mcp-config.json  install.sh  pyproject.toml  requirements.txt  server.json  test_functional.py  test_manual.py  test_simple.py  ГОТОВО.txt
construction_maps_mcp/: __init__.py  __main__.py  config.py  server.py
construction_maps_mcp/clients/: base_client.py  rosreestr_client.py  yandex_client.py
construction_maps_mcp/core/: cache.py  error_handler.py  rate_limiter.py  retry.py
construction_maps_mcp/tools/: __init__.py  cadastre.py  geocoding.py  geometry.py  infrastructure.py  visualization.py
construction_maps_mcp/utils/: formatters.py  geometry.py  validators.py
docs/: security-key-rotation.md
